<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/article_title_id"/>

    <TextView
            android:text="@string/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/article_publishedAt_id"/>

    <TextView
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/article_author_id"/>

    <TextView
            android:text="@string/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/article_source_id"/>

</LinearLayout>