<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

        <TextView
                android:text="@string/articles_per_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textSize="18sp"
                android:padding="5sp"
                android:textAlignment="center"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/articles_per_page_id"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:hint="@string/twenty_to_hundred"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/default_articles_per_page"
                android:importantForAutofill="no"
                tools:targetApi="o"/>

    </LinearLayout>
    <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tabLayout_id"
            app:tabGravity="fill"
            app:tabMode="fixed"
            android:background="@color/colorPrimary"
            app:tabIndicatorColor="@android:color/holo_red_light"
            app:tabTextColor="@android:color/white"/>

    <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewpager_id">

    </android.support.v4.view.ViewPager>
</LinearLayout>